deploy/k8s/ingress/chess-bot-external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chess-bot-ingress-route
  namespace: chess-bot
spec:
  entryPoints:
    - websecure
  tls: {} # use default TLS store
  routes:
    - kind: Rule
      match: Host(`chess-bot.debian-k3s`)
      services:
        - kind: Service
          name: chess-bot
          namespace: chess-bot
          port: 8080
          nativeLB: true
