deploy/k8s/ingress/chess-bot-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chess-bot-ingress-route
  namespace: chess-bot
spec:
  entryPoints:
    - websecure
  tls:
    secretName: chess-bot-tls
  routes:
    - kind: Rule
      match: Host("chess-bot.node.external")
      services:
        - kind: Service
          port: 8080
          name: chess-bot
