deploy/k8s/ingress/docker-registry-external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-ingress-route
  namespace: docker-registry
spec:
  entryPoints:
    - websecure
  tls:
    secretName: docker-registry-tls
  routes:
    - kind: Rule
      match: Host("docker-registry.node.external")
      services:
        - kind: Service
          port: 5000
          name: docker-registry
