deploy/k8s/ingress/grafana-external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls: {} # use default TLS store
  routes:
    - kind: Rule
      match: Host(`grafana.debian-k3s`)
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
