deploy/k8s/ingress/tempo-external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tempo-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("tempo.node.external")
      services:
        - kind: Service
          port: 4318
          name: tempo
